[package]
name = "light_test"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
sun-times = "0.1.2"
chrono = "0.4.19"
sun = "0.2.0"
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.9.21"
serde_json = "1.0.96"